test/parser/module_error.dmz
// RUN: compiler %s 2>&1 -ast-dump | filecheck %s

// CHECK: [[# @LINE + 2 ]]:1: error: expected ';'
module mod1
module mod1;
// CHECK: [[# @LINE + 1 ]]:14: error: expected identifier
module mod1::;
// CHECK: [[# @LINE + 1 ]]:12: error: expected ';'
module mod1:;
// CHECK: [[# @LINE + 3 ]]:1: error: expected identifier
import 

fn main() -> void {
// CHECK: [[# @LINE + 1 ]]:10: error: expected expression
    std::;
// CHECK: [[# @LINE + 2 ]]:1: error: expected expression
    std::
}
